# curs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.json  envConfig  node.md  package-lock.json  package.json  pypi  python_curs  requirements.txt  runtime.sh  rust_curs  setup.py  type.sh
curious/: __main__.py  base_data_loader.py  load_data.py  tokenizer.py  treesitter_rust_data_processor.py
curious/tbcnn/: cnn_tree.ckpt.index
curious/util/data/data_loader/: base_data_loader.py  token_vocab_extractor.py
curious/util/data/data_processor/: pycparser_data_processor.py  treesitter_rust_data_processor.py
curious/util/network/: tbcnn.py
curious/vocab/: token.txt  type.txt
curs/: __main__.py  argument_parser.py  base_data_loader.py  base_data_processor.py  load_data.py  model.py  tokenizer.py
curs/util/data/data_processor/: ast_parser.py  base_data_processor.py  srcml_data_processor.py  treesitter_c_data_processor.py
data/: error.rs
scripts/: curious  curs  model_convert.py  prepare_data.sh  runtime.sh
src/: cli.rs  extension.ts  extractor.rs  language.rs  lib.rs  main.rs
src/query/: cli.rs  extractor.rs  extractor_chooser.rs  files.rs  language.rs  mod.rs
src/safe/: inference.rs  mod.rs
src/snapshots/: curs__tests__all_rust.snap.new
tmp/: s3.sh
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode/src/: configurations.ts  decorator.ts  extension.ts  logger.ts  pattern_detection.ts  remote_interface.ts  status_bar.ts
vscode/src/test/: runTest.js.map
vscode/src/test/suite/: extension.test.js.map  index.js.map
